@@ -11,7 +11,7 @@ SUBST_DOMSERVER = save_sources2file restore_sources2db static_scoreboard \
                   simulate_contest create_accounts multi_rejudge \
                   eventdaemon
 
-SUBST_JUDGEHOST = create_cgroups dj_make_chroot
+SUBST_JUDGEHOST = create_cgroups dj_make_chroot dj_run_chroot
 
 SUBST_FILES = $(SUBST_DOMSERVER) $(SUBST_JUDGEHOST)
 
