@@ -15,6 +15,7 @@ Version 6.0.0 - DEV
  - Add support for Kotlin by mounting /bin in chroot environment.
  - Add options to have second scoreboard resolution and to suppress
    problem information from the scoreboard. Thanks Marc Furon.
+ - Add helper script dj_run_chroot to perform chroot operations.
  - [security] Fix team permission for viewing clarification categories.
  - Many small issues fixed and documentation improvements.
 
